--- a/rakefile
+++ b/rakefile
@@ -1,8 +1,8 @@
 require 'rdoc/task'
 
 Rake::RDocTask.new(:rdoc) {|rdoc|
-  rdoc.rdoc_files.include(%w[ README matrix.rb])
+  rdoc.rdoc_files.include(%w[ README matrix.rb quaternion.rb])
   rdoc.main = 'README'
-  rdoc.title = 'matrix'
+  rdoc.title = 'Math Library'
   rdoc.rdoc_dir = 'doc'
 }
